Removed print statements